<resources>
    <string name="app_name">Test</string>

    <string name="Vk3_teht">T1 Button</string>
    <string name="Start_button">Start</string>
    <string name="Stop_button">Stop</string>
    <string name="Started_txt">Started</string>
    <string name="Stopped_txt">Stopped</string>
    <string name="Status_txt">Status</string>
    <string name="Suurenna_button">Suurenna</string>
    <string name="Pienenna_button">Pienenna</string>
    <string name="Zoom_txt">Zoom</string>


    <string name="Vk5_teht">T2 Alarm</string>
    <string name="btn_Time">Time</string>
    <string name="btn_Alarm">Alarm</string>
    <string name="btn_Snooze">Snooze</string>
    <string name="btn_StopAlarm">Stop Alarm</string>
    <string name="btn_Increase">+</string>
    <string name="btn_2Increase">++</string>
    <string name="btn_Decrease">-</string>
    <string name="btn_2Decrease">--</string>
    <string name="time_hours">HH</string>
    <string name="time_minutes">MM</string>
    <string name="time_seconds">SS</string>

    <string name="Vk4_teht">T3 Radio</string>
    <string name="txt_Frequenzy">90.0 Mhz</string>
    <string name="txt_FreqNum">0</string>
    <string name="radio_CH1">CH 1</string>
    <string name="radio_CH2">CH 2</string>
    <string name="radio_CH3">CH 3</string>
    <string name="radio_Off">OFF</string>
    <string name="radioLowFreq">87 Mhz</string>
    <string name="radioMidFreq">90 Mhz</string>
    <string name="radioHighFreq">108 Mhz</string>

</resources>
